--- a/templates/nav.html
+++ b/templates/nav.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title%}{% endblock title %}</title>
-    <link rel="stylesheet"  href={% static "css/styles.css" %}>
+    <link rel="stylesheet"  href={% static "css/1.css" %}>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -40,20 +40,20 @@
                         
                 <img style="margin-bottom: 10px;" src={% static "images/menu.png" %} class="menu-icon" onclick="menutoggle()">
             </div>
+        </div>
+
 {% block banner %}
-            <div class="row">
-                <div class="col-2">
-                    <h1>Give Your Workout <br> A New Style!</h1>
-                    <p>Success isn't always about greatness. It;s about consistency. Consistent <br> hard work gains
-                        success. Greatness will come.</p>
-                    <a href="" class="btn">Explore Now &#8594;</a>
-                </div>
-                <div class="col-2">
-                    <img src={% static "images/image1.png" %}>
-                </div>
+        <div class="arow" style="margin-left:50px;">
+            <div class="col-2">
+                <h1>Give Your Workout <br> A New Style!</h1>
+                <p>Success isn't always about greatness. It;s about consistency. Consistent <br> hard work gains
+                    success. Greatness will come.</p>
+                <a href="" class="btn">Explore Now &#8594;</a>
+            </div>
+            <div class="col-2">
+                <img src={% static "images/image1.png" %}>
             </div>
         </div>
-    </div>
 {% endblock banner %}
 
 
@@ -62,43 +62,44 @@
 {% endblock content %}
 
 {% block footer %}
-    <div class="footer">
-        <div class="footercontainer">
-            <div class="row">
-                <div class="footer-col-1">
-                    <h3>Download Our App</h3>
-                    <p>Download App for Android and ios mobile phone.</p>
-                    <div class="app-logo">
-                        <img src={% static "images/play-store.png" %}>
-                        <img src={% static "images/app-store.png" %}>
+        <div class="footer">
+            <div class="footercontainer">
+                <div class="row">
+                    <div class="footer-col-1">
+                        <h3>Download Our App</h3>
+                        <p>Download App for Android and ios mobile phone.</p>
+                        <div class="app-logo">
+                            <img src={% static "images/play-store.png" %}>
+                            <img src={% static "images/app-store.png" %}>
+                        </div>
+                    </div>
+                    <div class="footer-col-2">
+                        <img src={% static "images/logo-white.png"%} >
+                        <p>Our Purpose Is To Sustainably Make the Pleasure and Benefits of Sports Accessible to the Many.
+                        </p>
+                    </div>
+                    <div class="footer-col-3">
+                        <h3>Useful Links</h3>
+                        <ul>
+                            <li>Coupons</li>
+                            <li>Blog Post</li>
+                            <li>Return Policy</li>
+                            <li>Join Affiliate</li>
+                        </ul>
+                    </div>
+                    <div class="footer-col-4">
+                        <h3>Follow Us</h3>
+                        <ul>
+                            <li>Facebook</li>
+                            <li>Twitter</li>
+                            <li>Instagram</li>
+                            <li>Youtube</li>
+                        </ul>
                     </div>
                 </div>
-                <div class="footer-col-2">
-                    <img src={% static "images/logo-white.png"%} >
-                    <p>Our Purpose Is To Sustainably Make the Pleasure and Benefits of Sports Accessible to the Many.
-                    </p>
-                </div>
-                <div class="footer-col-3">
-                    <h3>Useful Links</h3>
-                    <ul>
-                        <li>Coupons</li>
-                        <li>Blog Post</li>
-                        <li>Return Policy</li>
-                        <li>Join Affiliate</li>
-                    </ul>
-                </div>
-                <div class="footer-col-4">
-                    <h3>Follow Us</h3>
-                    <ul>
-                        <li>Facebook</li>
-                        <li>Twitter</li>
-                        <li>Instagram</li>
-                        <li>Youtube</li>
-                    </ul>
-                </div>
+                <hr>
+                <p class="copyright">Copyright 2020 - Samwit Adhikary</p>
             </div>
-            <hr>
-            <p class="copyright">Copyright 2020 - Samwit Adhikary</p>
         </div>
     </div>
 
